<?xml version="1.0" encoding="utf-8"?>
<com.anykeyapp.view.AddItemView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/head_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/header_layout"
                layout="@layout/header_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head_part">

            <RelativeLayout
                android:id="@+id/recycler_layout"
                android:layout_width="70dp"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/add_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/recycler_layout"
                android:layout_toRightOf="@+id/recycler_layout">

                <com.febaisi.CustomTextView
                    android:id="@+id/entry_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_name_text"
                    android:textColor="@color/basic_red"
                    android:textSize="14sp"
                    app:typeface="Caviar Dreams Bold.ttf" />

                <EditText
                    android:id="@+id/entry_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/entry_name_title"
                    android:textColor="@color/basic_red" />

                <com.febaisi.CustomTextView
                    android:id="@+id/exp_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/entry_name_edit_text"
                    android:text="@string/exp_date_title"
                    android:textColor="@color/basic_red"
                    android:textSize="14sp"
                    app:typeface="Caviar Dreams Bold.ttf" />

                <EditText
                    android:id="@+id/exp_date_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/exp_date_title"
                    android:layout_toLeftOf="@+id/scan_button"
                    android:textColor="@color/basic_red" />

                <ImageView
                    android:id="@+id/scan_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/exp_date_title"
                    android:background="@drawable/scan_btn_background" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/calendar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_form"
                android:layout_toEndOf="@+id/recycler_layout"
                android:layout_toRightOf="@+id/recycler_layout">

                <CalendarView
                    android:id="@+id/calendar_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/save_btn" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/save_btn_background"
                    android:text="@string/save_text"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <com.anykeyapp.view.drawer.DrawerView
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/drawer_list_width"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
</com.anykeyapp.view.AddItemView>