<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_layout_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/header_base"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/menu_item"
            android:layout_width="@dimen/header_menu_icon_width_height"
            android:layout_height="@dimen/header_menu_icon_width_height"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/header_menu_icon_top_margin"
            android:layout_marginStart="@dimen/header_menu_icon_top_margin"
            android:layout_marginTop="@dimen/header_menu_icon_top_margin"
            android:src="@drawable/burger" />
    </RelativeLayout>
</RelativeLayout>