...
        <RelativeLayout
            android:id="@+id/head_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/add_item_btn"
                layout="@layout/add_button_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <include
                android:id="@+id/header_layout"
...
