<?xml version="1.0" encoding="utf-8"?>
<com.febaisi.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawer_item_color"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:paddingLeft="@dimen/drawer_padding_side"
    android:paddingRight="@dimen/drawer_padding_side"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"
    android:textColor="@color/white"
    android:textSize="@dimen/drawer_text_size" />